--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,7 +74,7 @@
 /* Tailwind Styles */
 
 .app {
-  @apply flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
+  @apply flex items-center flex-col min-h-[100vh] max-w-7xl mx-auto px-6 md:px-16;
 }
 
 .black_btn {
@@ -106,11 +106,11 @@
 }
 
 .desc {
-  @apply mt-5 text-lg text-[#666666] sm:text-xl max-w-2xl;
+  @apply mt-3 md:mt-5 text-lg text-[#666666] sm:text-xl max-w-2xl;
 }
 
 .search_input {
-  @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+  @apply block w-full md:w-[560px] rounded-md border border-gray-200 bg-white py-2.5 px-6 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
 }
 
 .copy_btn {
@@ -122,12 +122,12 @@
 }
 
 .prompt_layout {
-  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
+  @apply w-full flex flex-wrap gap-6;
 }
 
 /* Feed Component */
 .feed {
-  @apply mt-16 mx-auto w-full max-w-xl flex justify-center items-center flex-col gap-2;
+  @apply w-full mt-16
 }
 
 /* Form Component */
@@ -158,7 +158,7 @@
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex flex-col w-full md:w-[368px] p-6 pb-4 rounded-lg bg-white/20 border border-gray-200 backdrop-blur-lg shadow-md h-fit;
 }
 
 .flex-center {
